@@ -1,0 +1,13 @@
+.. _api.extras.security:
+
+Security
+========
+.. module:: webapp2_extras.security
+
+This module provides security related helpers such as secure password hashing
+tools and a random token generator.
+
+.. autofunction:: create_token
+.. autofunction:: create_password_hash
+.. autofunction:: check_password_hash
+.. autofunction:: hash_password
